# qrcode-generator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-pages.yaml
qrcode-app/: Cargo.toml  Dioxus.toml
qrcode-app/assets/: tailwind.css
qrcode-app/src/: main.rs  types.rs
qrcode-app/src/components/: footer.rs  header.rs  home.rs  icons.rs  mod.rs  preview.rs  qr_controls.rs
qrcode-lib/: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
qrcode-lib/examples/: advanced.rs  basic.rs  branded.rs  fancy_qr.rs  fancy_styled.rs  svg_output.rs
qrcode-lib/src/: fancy.rs  lib.rs  qrcode.rs  render.rs  segment.rs  types.rs
