[package]
name = "qrcode-app"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["router"] }
qrcode-lib.workspace = true
gloo-timers = { version = "0.3", features = ["futures"] }

web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlAnchorElement", "Navigator", "Clipboard", "Worker", "WorkerGlobalScope", "MessageEvent", "MessagePort", "DedicatedWorkerGlobalScope", "Blob", "BlobPropertyBag", "Url"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
futures = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
