[package]
name = "qrcode-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A powerful QR Code generator library with fancy rendering capabilities"
keywords = ["qrcode", "qr", "generator", "svg", "fancy"]
categories = ["encoding", "graphics"]

[dependencies]
